fixing bio image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body style="background-color: #efefef;">
         <div style="font-family:arial;color: #15141a;width: 1050px">
-            <img src="img/img1.JPG" width="500px" style="float:left;margin: 0px 50px">
+            <img src="img/img1.jpg" width="500px" style="float:left;margin: 0px 50px">
             <h1 style="margin-top: 50px;">Christian's Bio</h1>
             <p>Hello! I'm currently a student at NC A&T, and I study computer science. 
                 I wasn't always doing this though! I grew up in Greensboro, NC, and I have a 
