--- a/little_prince.html
+++ b/little_prince.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Little Prince</title>
         <link href="prince.css" type="text/css" rel="stylesheet">
     </head>
     <body>
